force-app/main/default/objects/QTB_Billing_Account_Country_Validation__mdt/QTB_Billing_Account_Country_Validation__mdt.object-meta.xml
<CustomObject>
    <label>QTB Billing Account Country Validation</label>
    <pluralLabel>QTB Billing Account Country Validations</pluralLabel>
</CustomObject>