force-app/main/default/objects/QTB_Billing_Account_Country_Validation__mdt/fields/QTB_Country__c.field-meta.xml
<CustomField>
    <fullName>QTB_Country__c</fullName>
    <label>Country</label>
    <length>45</length>
    <type>Text</type>
</CustomField>