force-app/main/default/objects/QTB_Billing_Account_Country_Validation__mdt/fields/QTB_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>QTB_Field_Name__c</fullName>
    <label>QTB Field Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>