force-app/main/default/objects/QTB_Billing_Account_Country_Validation__mdt/fields/QTB_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>QTB_Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QTB Mandatory</label>
    <type>Checkbox</type>
</CustomField>