force-app/main/default/objects/QTB_Billing_Account_Country_Validation__mdt/listViews/My_View.listView-meta.xml
<ListView>
    <fullName>My_View</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>QTB_Country__c</columns>
    <columns>IsActive__c</columns>
    <columns>QTB_Field_Name__c</columns>
    <columns>QTB_Mandatory__c</columns>
    <columns>QTB_Non_Mandatory__c</columns>
    <filterScope>Everything</filterScope>
    <label>My View</label>
    <language>en_US</language>
</ListView>